<resources>
    <string name="app_name">Ma réu</string>
    <string name="Hello_World">Hello World!</string>

    <!--String for the toolbar-->
    <string name="toolbar_menu_filter">Filter</string>
    <string name="toolbar_menu_button_filter_item1">Trier par ordre croissant</string>
    <string name="toolbar_menu_button_filter_item2">Trier par ordre décroissant</string>
    <string name="toolbar_menu_button_filter_item3">Trier par salle</string>
    <string name="toolbar_menu_button_filter_item4">Trier par date</string>

    <!--String to fill the DetailsListMeetingActivity activity-->
   <string name="activity_meeting_details_activity">Nouvelle Réunion</string>
   <string name="activity_meeting_details_subject">Sujet de la réunion</string>
   <string name="activity_meeting_details_date">Date de la reunion</string>
   <string name="activity_meeting_details_time">Heure de la reunion</string>
   <string name="activity_meeting_details_people">Liste des participants</string>
   <string name="activity_meeting_details_button">Créer une réunion</string>

    <!--String for fragment_meeting-->
    <string name="fragment_meeting">Couleur de la reunion</string>
    <string name="reunion_mail_exemple">azdu@azd.fr , azd@azd.fr, azdgfr@fefz.fr, azdu@azd.fr , azd@azd.fr, azdgfr@fefz.fr, azdu@azd.fr , azd@azd.fr, azdgfr@fefz.fr, azdu@azd.fr , azd@azd.fr, azdgfr@fefz.fr,</string>
    <string name="reunion_room_exemple">Hydrogene</string>
    <string name="reunion_time_exemple">12:59</string>
    <string name="reunion_subject_exemple">Travail D\'équipe - 12:45 - Hydrogène</string>
    <string name="chip_invalid_mail">Email invalide</string>
    <string name="timepicker_time_separator">:</string>
    <string name="toolbar_menu_button_filter">filtre</string>
    <string name="filtrer_par_date">Filtrer par date</string>
    <string name="filtrer_par_salle">Filtrer par Salle</string>
    <string name="Picker_title_hour">Selectionnez L\'heure</string>
    <string name="filter_hint_date_text">Cliquer pour choisir une date</string>
    <string name="room_NoRoom">Aucune Salle</string>


    <!--String to fill the spinner-->
    <string-array name="Room">
        <item>Aucune Salle</item>
        <item>Hydrogène</item>
        <item>Helium</item>
        <item>Beryllium</item>
        <item>Bore</item>
        <item>Carbonne</item>
        <item>Azote</item>
        <item>Oxygène</item>
        <item>Fluor</item>
        <item>Néon</item>
    </string-array>


</resources>
