...
        app:layout_constraintVertical_weight="1"
        android:layout_marginBottom="10dp"
        android:hint="@string/filter_hint_date_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_filter_date"
            android:clickable="false"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.material.textfield.TextInputEditText>
...
